nrw/geonetwork/catalog/style/srv_custom_style.less
// variables for manipulating the theme
@import "../views/default/less/gn_variables_default.less";

/* Define custom node style here */
@font-face {
    font-family: "Gotham Round";
    src: url("../catalog/style/GothamRnd-Light.otf") format("opentype");
    font-weight: lighter;
    font-style: normal;
}

@font-face {
    font-family: "Gotham Round";
    src: url("../catalog/style/GothamRnd-LightIta.otf") format("opentype");
    font-weight: lighter;
    font-style: italic;
}

@font-face {
    font-family: "Gotham Round";
    src: url("../catalog/style/GothamRnd-Book.otf") format("opentype");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Gotham Round";
    src: url("../catalog/style/GothamRnd-BookIta.otf") format("opentype");
    font-weight: normal;
    font-style: italic;
}

@font-face {
    font-family: "Gotham Round";
    src: url("../catalog/style/GothamRnd-Bold.otf") format("opentype");
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: "Gotham Round";
    src: url("../catalog/style/GothamRnd-BoldIta.otf") format("opentype");
    font-weight: bold;
    font-style: italic;
}

body {
    font-family: "Gotham Round", Arial;
    word-break: keep-all;
    word-wrap: normal;
    line-break: normal;
    color: #58595B !important;
}

a {
    font-weight: bold !important;
    color: #007485 !important;
    line-break: normal !important;
}

a:hover {
    color: #007485;
    text-decoration: underline !important;
}

a:focus {
    color: #007485;
}

.gn-card .gn-card-heading .gn-md-title a {
    color: #007485;
}

.gn-card .gn-card-heading .gn-md-title a:hover {
    color: #007485;
    text-decoration: underline;
}

.gn-row-topics .gn-topic-select input + span {
    color: #007485;
    font-weight: bold;
}

.btn-default {
    color: #007485 !important;
    font-weight: bold;
}

.btn-default :hover {
    color: #007485 !important;
    font-weight: bold;
    text-decoration: underline;
    // changed button colour for accessibility
    background-color: #F5F5F5 !important;
}

.btn {
    font-weight: bold;
}

.btn-link {
    color: #007485;
    font-weight: bold;
}

.btn :hover {
    text-decoration: underline;
}

.btn-danger, .btn-danger:hover {
    color: #fff !important;
}

.btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary, .btn-primary {
    color: #fff !important;
}

// changed button colours for accessibility
.btn-default:active, .btn-default.active, .open > .dropdown-toggle.btn-default {
    background-color: #F5F5F5 !important;
}

.btn-default:focus, .btn-default.focus {
    background-color: #F5F5F5 !important;
}

.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
    background-color: #F5F5F5 !important;
}

.panel-default > .panel-heading {
    font-weight: bold;
    color: #58595B;
}

.gn-row-topics .gn-topic-select input + span :hover {
    text-decoration: underline;
}

.gn-row-topics .gn-topic .panel-body a h2 {
    font-weight: bold;
    color: #fff !important;
}

.gn-row-topics .gn-topic .panel-body a h2 :hover {
    text-decoration: underline;
}

.gn-row-topics .gn-topic .panel-body a:hover {
    text-decoration: none !important;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    font-weight: bold !important;
    color: #58595B;
}

.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
    color: #fff !important;
}

legend, legend > * > label {
    color: #58595B !important;
    font-weight: bold !important;
}

.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
    color: #fff !important;
}

.gn-card .gn-card-heading .gn-md-title h1 {
    color: #007485;
}

.navbar-default .gn-logo-link .gn-name :hover {
    text-decoration: underline !important;
}

a.pull-left.gn-logo-link :hover{
    text-decoration: none !important;
}

.navbar-right > .username-dropdown > li > a :hover{
    text-decoration: none !important;
    color: #007485;
}

.dropdown-menu > .active > a:hover {
    color: #007485 !important;
}

.dropdown-menu > .active > a, .dropdown-menu > .active > a:focus {
    background-color: unset !important;
}

span.gn-user-name.ng-binding :hover {
    text-decoration: underline;
}

.navbar-default .gn-user-info .gn-user-role {
    color: #007485;
}

.navbar-default .gn-user-info .gn-user-role :hover {
    text-decoration: underline;
    color: #007485;
}

.gn-facet .gn-facet-container a :hover {
    text-decoration: none !important;
}

.gn-facet .gn-facet-container a span {
    color: #007485;
    // add padding to improve accessibility
    padding: 4px 0px;
}

.gn-facet .gn-facet-container a span :hover{
    color: #007485;
    text-decoration: underline;
}

.gn-facet .gn-facet-container a > span.fa :hover {
    text-decoration: none !important;
    color: #007485;
}

.gn-facet .gn-facet-container .gn-facet-label {
    color: #007485;
}

[ng-app="gn_admin"] [data-ng-controller="GnAdminController"] .sidebar ul li a:hover {
    color: #007485 !important;
}

[ng-app="gn_admin"] [data-ng-controller="GnAdminController"] .sidebar .sidebar-col-full .nav-sidebar li a:hover span {
    color: #007485 !important;
    text-decoration: underline;
}

[ng-app="gn_admin"] [data-ng-controller="GnAdminController"] .main .gn-row-admin-buttons .btn-group .btn:hover i {
    color: #007485;
}

[ng-app="gn_admin"] [data-ng-controller="GnAdminController"] .sidebar .sidebar-col-full .nav-sidebar li a span {
    color: #007485;
}

[ng-app="gn_admin"] [data-ng-controller="GnAdminController"] .sidebar .sidebar-col-full .nav-sidebar li a span :hover{
    color: #007485;
    text-decoration: underline;
}

[ng-app="gn_admin"] [data-ng-controller="GnAdminController"] .sidebar .sidebar-col-main > li :hover{
    color: #007485;
    text-decoration: underline;
}

[ng-app="gn_admin"] .gn-top-bar .dropdown-menu > li.active > a, [ng-app="gn_admin"] .gn-top-bar .dropdown-menu > li:hover > a {
    color: #007485 !important;
}

.gn-facet .gn-facet-container a:hover * {
    color: #007485;
}

.ellipsis:after {
    display: none;
}

.gn-bottom-bar {
    position:relative;
    height: unset;
}

.social-media-list {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

[ng-app="gn_admin"] .gn-top-bar .navbar-collapse {
    padding-left: 15px;
}

.show-on-focus-only {
    margin-top: -40px;
    margin-left: 10px;
    top: 0;
    left: 0;
    padding: 8px;
    position: absolute;
    transform: translateX(-200%);
    transition: transform 0.3s;
    z-index: 10000;
    &:focus {
      transform: translateX(0%);
      outline: 2px auto @brand-warning !important;
    }
}

.facets-homepage {
    font-weight: bold;
    color: #fff;
    font-size: 14px;
}

.facets-homepage :hover {
    text-decoration: underline;
}

.flex-align-items-center {
    display: flex !important;
    align-items: center;
}

//change style to match default view to improve accessibility
.better-tags {
    word-break: break-word;
    white-space: normal;
    text-align: left;
    // add padding to improve accessibility
    padding: 2px 5px;
}

// change element colour to improve accessibility
[data-ng-search-form] .gn-top-search .gn-form-any .btn-favorites .text-warning {
    color: #007485;
}

// change placeholder colour to improve accessibility
::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    color: #58595B !important;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color: #58595B !important;
   opacity:  1 !important;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
   color: #58595B !important;
   opacity: 1 !important;
}
:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color: #58595B !important;
}
::-ms-input-placeholder { /* Microsoft Edge */
   color: #58595B !important;
}

::placeholder { /* Most modern browsers support this now. */
   color: #58595B !important;
}

